// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`group status component tests renders n.a. value correctly 1`] = `
<div
  style={
    Object {
      "left": "30%",
      "position": "absolute",
      "top": "40px",
    }
  }
>
  <div
    style={
      Object {
        "backgroundColor": "#e0e0e0",
        "borderRadius": "10px",
        "height": "184px",
        "margin": "auto",
        "width": "184px",
      }
    }
  >
    <div
      style={
        Object {
          "fontSize": "70px",
          "paddingTop": "20px",
          "textAlign": "center",
        }
      }
    >
      n.a
    </div>
    <div
      style={
        Object {
          "fontSize": "20px",
          "textAlign": "center",
        }
      }
    >
      text
    </div>
  </div>
</div>
`;

exports[`group status component tests renders value correctly 1`] = `
<div
  style={
    Object {
      "left": "30%",
      "position": "absolute",
      "top": "40px",
    }
  }
>
  <div
    style={
      Object {
        "backgroundColor": "#e0e0e0",
        "borderRadius": "10px",
        "height": "184px",
        "margin": "auto",
        "width": "184px",
      }
    }
  >
    <div
      style={
        Object {
          "fontSize": "70px",
          "paddingTop": "20px",
          "textAlign": "center",
        }
      }
    >
      50000%
    </div>
    <div
      style={
        Object {
          "fontSize": "20px",
          "textAlign": "center",
        }
      }
    >
      text
    </div>
  </div>
</div>
`;
